--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,184 @@
 <!DOCTYPE html>
-<html lang="es" xml:lang="es">
+<html lang="en">
+
 <head>
-    <title>Bienvenido a API de Productos</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FastAPI Product System | API Portal</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          },
+          colors: {
+            brand: {
+              50: '#f0f9ff',
+              100: '#e0f2fe',
+              500: '#0ea5e9', // Sky 500
+              600: '#0284c7', // Sky 600
+              900: '#0c4a6e', // Sky 900
+            },
+            dark: {
+              bg: '#0f172a', // Slate 900
+              card: '#1e293b', // Slate 800
+              text: '#f8fafc', // Slate 50
+              muted: '#94a3b8', // Slate 400
+            }
+          }
+        }
+      }
+    }
+  </script>
+
+  <style>
+    body {
+      background-color: #0f172a;
+      color: #f8fafc;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .glass-card {
+      background: rgba(30, 41, 59, 0.7);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      transition: transform 0.2s ease, border-color 0.2s ease;
+    }
+
+    .glass-card:hover {
+      transform: translateY(-2px);
+      border-color: rgba(14, 165, 233, 0.5);
+    }
+
+    .hero-gradient {
+      background: linear-gradient(to right, #38bdf8, #818cf8);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .status-dot {
+      height: 10px;
+      width: 10px;
+      background-color: #22c55e;
+      border-radius: 50%;
+      display: inline-block;
+      box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7);
+      animation: pulse-green 2s infinite;
+    }
+
+    @keyframes pulse-green {
+      0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7);
+      }
+
+      70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 6px rgba(34, 197, 94, 0);
+      }
+
+      100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(34, 197, 94, 0);
+      }
+    }
+  </style>
 </head>
-    <body>
-        
 
+<body class="min-h-screen flex flex-col items-center justify-center p-4 relative overflow-hidden">
 
+  <!-- Background Decoration -->
+  <div class="absolute top-0 left-0 w-full h-full overflow-hidden -z-10">
+    <div class="absolute top-[-10%] left-[-10%] w-[40%] h-[40%] bg-brand-600/20 rounded-full blur-[120px]"></div>
+    <div class="absolute bottom-[-10%] right-[-10%] w-[40%] h-[40%] bg-purple-600/20 rounded-full blur-[120px]"></div>
+  </div>
 
-        <div class="mx-auto flex max-w-sm items-center gap-x-4 rounded-xl bg-white p-6 shadow-lg outline outline-black/5 mt-10">
-            
-            <svg width="70px" fill="#149bc8" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>Swagger icon</title><path d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12c6.616 0 12-5.383 12-12S18.616 0 12 0zm0 1.144c5.995 0 10.856 4.86 10.856 10.856 0 5.995-4.86 10.856-10.856 10.856-5.996 0-10.856-4.86-10.856-10.856C1.144 6.004 6.004 1.144 12 1.144zM8.37 5.868a6.707 6.707 0 0 0-.423.005c-.983.056-1.573.517-1.735 1.472-.115.665-.096 1.348-.143 2.017-.013.35-.05.697-.115 1.038-.134.609-.397.798-1.016.83a2.65 2.65 0 0 0-.244.042v1.463c1.126.055 1.278.452 1.37 1.629.033.429-.013.858.015 1.287.018.406.073.808.156 1.2.259 1.075 1.307 1.435 2.575 1.218v-1.283c-.203 0-.383.005-.558 0-.43-.013-.591-.12-.632-.535-.056-.535-.042-1.08-.075-1.62-.064-1.001-.175-1.988-1.153-2.625.503-.37.868-.812.983-1.398.083-.41.134-.821.166-1.237.028-.415-.023-.84.014-1.25.06-.665.102-.937.9-.91.12 0 .235-.017.369-.027v-1.31c-.16 0-.31-.004-.454-.006zm7.593.009a4.247 4.247 0 0 0-.813.06v1.274c.245 0 .434 0 .623.005.328.004.577.13.61.494.032.332.031.669.064 1.006.065.669.101 1.347.217 2.007.102.544.475.95.941 1.283-.817.549-1.057 1.333-1.098 2.215-.023.604-.037 1.213-.069 1.822-.028.554-.222.734-.78.748-.157.004-.31.018-.484.028v1.305c.327 0 .627.019.927 0 .932-.055 1.495-.507 1.68-1.412.078-.498.124-1 .138-1.504.032-.461.028-.927.074-1.384.069-.715.397-1.01 1.112-1.057a.972.972 0 0 0 .199-.046v-1.463c-.12-.014-.204-.027-.291-.032-.536-.023-.804-.203-.937-.71a5.146 5.146 0 0 1-.152-.993c-.037-.618-.033-1.241-.074-1.86-.08-1.192-.794-1.753-1.887-1.786zm-6.89 5.28a.844.844 0 0 0-.083 1.684h.055a.83.83 0 0 0 .877-.78v-.046a.845.845 0 0 0-.83-.858zm2.911 0a.808.808 0 0 0-.834.78c0 .027 0 .05.004.078 0 .503.342.826.859.826.507 0 .826-.332.826-.853-.005-.503-.342-.836-.855-.831zm2.963 0a.861.861 0 0 0-.876.835c0 .47.378.849.849.849h.009c.425.074.853-.337.881-.83.023-.457-.392-.854-.863-.854z"></path></g></svg>
-            <div>
-              <div class="text-xl font-medium text-black">API con FastAPI</div>
-              <p class="text-gray-500">Funcionalidades para Manejo de datos</p>
-            </div>
-          </div>
+  <!-- Main Container -->
+  <main class="w-full max-w-4xl">
 
-    </body>
+    <!-- Header -->
+    <header class="text-center mb-16">
+      <div
+        class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-slate-800/50 border border-slate-700/50 mb-6">
+        <span class="status-dot"></span>
+        <span class="text-xs font-medium text-brand-50 tracking-wide uppercase">System Operational</span>
+      </div>
+      <h1 class="text-5xl md:text-6xl font-bold tracking-tight mb-4">
+        FastAPI <span class="hero-gradient">Product System</span>
+      </h1>
+      <p class="text-lg text-dark-muted max-w-2xl mx-auto">
+        Enterprise-grade RESTful API for managing products, customers, and tasks.
+        Built with performance, scalability, and security in mind.
+      </p>
+    </header>
+
+    <!-- Cards Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full px-4 md:px-0">
+
+      <!-- Documentation Card -->
+      <a href="/docs" class="glass-card rounded-2xl p-8 group cursor-pointer block">
+        <div
+          class="h-12 w-12 rounded-lg bg-green-500/10 flex items-center justify-center mb-6 group-hover:bg-green-500/20 transition-colors">
+          <i class="fa-solid fa-rocket text-green-400 text-xl"></i>
+        </div>
+        <h2 class="text-2xl font-semibold mb-2 group-hover:text-green-400 transition-colors">Swagger UI</h2>
+        <p class="text-dark-muted mb-6">Interactive API documentation. Test endpoints directly from your browser.</p>
+        <div class="flex items-center text-sm font-medium text-green-400">
+          Explore API <i class="fa-solid fa-arrow-right ml-2 group-hover:translate-x-1 transition-transform"></i>
+        </div>
+      </a>
+
+      <!-- Redoc Card -->
+      <a href="/redoc" class="glass-card rounded-2xl p-8 group cursor-pointer block">
+        <div
+          class="h-12 w-12 rounded-lg bg-brand-500/10 flex items-center justify-center mb-6 group-hover:bg-brand-500/20 transition-colors">
+          <i class="fa-solid fa-book-open text-brand-400 text-xl"></i>
+        </div>
+        <h2 class="text-2xl font-semibold mb-2 group-hover:text-brand-400 transition-colors">ReDoc</h2>
+        <p class="text-dark-muted mb-6">Clean, organized technical documentation ideal for reading and reference.</p>
+        <div class="flex items-center text-sm font-medium text-brand-400">
+          Read Docs <i class="fa-solid fa-arrow-right ml-2 group-hover:translate-x-1 transition-transform"></i>
+        </div>
+      </a>
+
+    </div>
+
+    <!-- Info Footer -->
+    <div
+      class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-4 text-center text-sm text-dark-muted border-t border-slate-800 pt-8">
+      <div class="flex flex-col items-center">
+        <span class="block text-brand-500 font-semibold mb-1">Version</span>
+        <span>v0.3.0 (Beta)</span>
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="block text-brand-500 font-semibold mb-1">Authentication</span>
+        <span>OAuth2 / JWT Bearer</span>
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="block text-brand-500 font-semibold mb-1">Support</span>
+        <a href="mailto:henry.taby@gmail.com" class="hover:text-white transition-colors">henry.taby@gmail.com</a>
+      </div>
+    </div>
+
+  </main>
+
+  <footer class="absolute bottom-4 text-xs text-slate-700">
+    &copy; 2026 FastAPI Product System. All rights reserved.
+  </footer>
+
+</body>
+
 </html>
